--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -19,7 +19,7 @@
 <body class="">
   <header class="hero horse-image flex flex-centered">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="#">LOGO</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -27,10 +27,10 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="#">домой <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/">домой <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">схема</a>
+            <a class="nav-link" href="/resourses">схемы</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">поддержка</a>
@@ -48,24 +48,6 @@
       </div>
     </nav>
   </header>
-  <span id='linksCatego' class="text-muted">
-  </span>
-  </div>
-  </div>
-  <nav class="navbar navbar-dark bg-dark">
-    <span class="text-muted">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent"
-        aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <strong class='text-warning'> Все категории</strong>
-    </span>
-  </nav>
-  </div>
-
-  </nav>
-  <div class="container">
-  </div>
 
   {{{body}}}
 </body>
