--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -10,13 +10,19 @@
 
   <script defer src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
 
+ <script defer src="go-debug.js"></script>
+   <script defer src="application.js"></script>
+   <script defer src="init.js"></script>
+
+
+
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="/stylesheet/style.css">
   <title>Project</title>
 </head>
 
-<body class="">
+<body class="" onload="init()">
   <header class="page-header">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">LOGO</a>
@@ -39,7 +45,7 @@
             <a class="nav-link" href="#">цены</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">о нас</a>
+            <a class="nav-link" href="/about">о нас</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">контакты</a>
