--- a/views/init.hbs
+++ b/views/init.hbs
@@ -6,22 +6,30 @@
   <button id="SaveButton" onclick="save()">Save</button>
   <button onclick="load()">Load</button>
   Diagram Model saved in JSON format:
-  <textarea id="mySavedModel" style="width:100%;height:300px">{ "class": "GraphLinksModel",
+  <textarea id="mySavedModel" style="width:100%;height:300px ">{ "class": "GraphLinksModel",
   "linkFromPortIdProperty": "fromPort",
   "linkToPortIdProperty": "toPort",
   "nodeDataArray": [ 
-{"category":"Start", "text":"Start", "key":-1, "loc":"-630 -197"},
-{"text":"молоко 1000л", "key":-2, "loc":"-774 -77.01542800664902"},
-{"text":"сахар 500кг", "key":-3, "loc":"-499 -66.01542800664902"},
-{"text":"потери\nмолоко 40%\nсахар 20%", "key":-4, "loc":"-644 13"},
-{"text":"результат", "key":-5, "loc":"-621 151"}
+{"category":"Start", "text":"Start", "key":-1, "loc":"-722 -349"},
+{"text":"молоко 1000л", "key":-2, "loc":"-1066 -239.01542800664902"},
+{"text":"сахар 500кг", "key":-3, "loc":"-842 -237.01542800664902"},
+{"text":"потери\nмолоко 40%\nсахар 20%", "key":-4, "loc":"-956 -136"},
+{"text":"сгущенка ", "key":-5, "loc":"-956 -17"},
+{"text":"огонь 1000мл", "key":-6, "loc":"-512 -17"},
+{"text":"карамель", "key":-7, "loc":"-750 250"},
+{"text":"потери\nсгущенка 100%\nогонь 20%", "key":-8, "loc":"-750 96"}
  ],
   "linkDataArray": [ 
-{"from":-4, "to":-5, "fromPort":"B", "toPort":"T", "points":[-644,46.55710296630859,-644,56.55710296630859,-644,89.93570098876953,-621,89.93570098876953,-621,123.31429901123047,-621,133.31429901123047]},
-{"from":-2, "to":-4, "fromPort":"B", "toPort":"T", "points":[-774,-59.32972701787948,-774,-49.32972701787948,-774,-39.943414992094034,-644,-39.943414992094034,-644,-30.55710296630859,-644,-20.55710296630859]},
-{"from":-3, "to":-4, "fromPort":"B", "toPort":"T", "points":[-499,-48.32972701787948,-499,-38.32972701787948,-499,-34.443414992094034,-626.2822494506836,-34.443414992094034,-626.2822494506836,-30.55710296630859,-626.2822494506836,-20.55710296630859]},
-{"from":-1, "to":-2, "fromPort":"B", "toPort":"T", "points":[-630,-160.25,-630,-150.25,-630,-127.47556449770927,-774,-127.47556449770927,-774,-104.70112899541854,-774,-94.70112899541854]},
-{"from":-1, "to":-3, "fromPort":"B", "toPort":"T", "points":[-630,-160.25,-630,-150.25,-630,-121.97556449770927,-499,-121.97556449770927,-499,-93.70112899541854,-499,-83.70112899541854]}]}
+{"from":-4, "to":-5, "fromPort":"B", "toPort":"T", "points":[-956,-102.44289703369142,-956,-92.44289703369142,-956,-68.56429901123047,-956,-68.56429901123047,-956,-44.68570098876953,-956,-34.68570098876953]},
+{"from":-2, "to":-4, "fromPort":"B", "toPort":"T", "points":[-1066,-221.32972701787952,-1066,-211.32972701787952,-1066,-195.44341499209406,-973.7177505493164,-195.44341499209406,-973.7177505493164,-179.5571029663086,-973.7177505493164,-169.5571029663086]},
+{"from":-3, "to":-4, "fromPort":"B", "toPort":"T", "points":[-842,-219.32972701787946,-842,-209.32972701787946,-842,-194.44341499209403,-938.2822494506836,-194.44341499209403,-938.2822494506836,-179.5571029663086,-938.2822494506836,-169.5571029663086]},
+{"from":-1, "to":-2, "fromPort":"B", "toPort":"T", "points":[-722,-312.25,-722,-302.25,-722,-284.4755644977093,-1066,-284.4755644977093,-1066,-266.70112899541857,-1066,-256.70112899541857]},
+{"from":-1, "to":-3, "fromPort":"B", "toPort":"T", "points":[-722,-312.25,-722,-302.25,-722,-283.4755644977093,-842,-283.4755644977093,-842,-264.70112899541857,-842,-254.70112899541854]},
+{"from":-1, "to":-6, "fromPort":"B", "toPort":"T", "points":[-722,-312.25,-722,-302.25,-722,-173.46785049438478,-512,-173.46785049438478,-512,-44.68570098876953,-512,-34.68570098876953]},
+{"from":-5, "to":-8, "fromPort":"B", "toPort":"T", "points":[-956,0.6857009887695327,-956,10.685700988769533,-956,31.56429901123047,-771.3866322835287,31.56429901123047,-771.3866322835287,52.44289703369141,-771.3866322835287,62.44289703369141]},
+{"from":-6, "to":-8, "fromPort":"B", "toPort":"T", "points":[-512,0.6857009887695327,-512,10.685700988769533,-512,31.56429901123047,-728.6133677164713,31.56429901123047,-728.6133677164713,52.44289703369141,-728.6133677164713,62.44289703369141]},
+{"from":-8, "to":-7, "fromPort":"B", "toPort":"T", "points":[-750,129.5571029663086,-750,139.5571029663086,-750,180.93570098876955,-750,180.93570098876955,-750,222.31429901123047,-750,232.31429901123047]}
+ ]}
   </textarea>
   <button onclick="printDiagram()">Print Diagram Using SVG</button>
 </div>
