--- a/public/stylesheet/style.css
+++ b/public/stylesheet/style.css
@@ -2,7 +2,7 @@
     list-style: none;
 }
 .page-header {
-    margin-bottom:150px;
+    margin-bottom:100px;
 }
 a {
     text-decoration: none;
@@ -19,12 +19,7 @@ a {
     font-weight: 400;
     color: #000000;
   }
-  
-  a {
-    text-decoration: none;
-  }
-  
-  
+
   .container {
     width: 1200px;
     margin: 0 auto;
@@ -105,9 +100,9 @@ a {
   }
   
   .slider-item {
-    display: none;
     padding: 50px 0px 170px 0;
     padding-left: 70px;
+    margin-bottom: 60px;
   }
 
   .slider-title {
@@ -123,13 +118,18 @@ a {
   .slider-item:nth-child(2) {
     background-image: url("/image/2020-02-13_16-54-05.png");
     background-repeat: no-repeat;
-    background-position: 10px -100px;
+    background-position: 10px -80px;
   }
   
   .slider-item:nth-child(3) {
-    background-image: url("/image/Rappid (1).png");
+
+    background-color: rgb(247, 243, 243);
+    background-image: url("https://uploads-ssl.webflow.com/5773a44a2de39fb074c75653/57d6bd6bdc93572544092857_Rappid-2-dark-theme-web4.png");
+    background-size: 500px 350px;
     background-repeat: no-repeat;
-    background-position: 100% 20px;
+    background-position: 95% 20px;
+    position: relative;
+    top: -50px;
   }
   
   #product-1:checked ~ .slider-list .slider-item:nth-child(1) {
@@ -180,22 +180,22 @@ a {
     display: block;
     width: 240px;
     padding: 13px 0;
-    
     font-size: 16px;
     line-height: 18px;
     color: #ffffff;
     text-transform: uppercase;
-    text-align: center;
-    text-decoration: none;
-    
+    text-align: center;    
     background-color: #fb565a;
     border-radius: 3px;
     border: none;
+    text-decoration: none;
   }
   
   .button:hover,
   .button:focus {
     background-color: #e74246;
+    text-decoration: none;
+    color: white;
   }
   
   .button:active {
@@ -214,9 +214,105 @@ a {
     
   }
   .slider-loh {
-    padding-bottom: 320px;
+    padding-bottom: 280px;
   }
   .slider-item-bottoms {
       padding-bottom: 400px;
   }
+  .slider-buttom-two {
+    position: relative;
+    left:750px;
+    bottom: -140px;
+  }
   
+  .foorter-social-list {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex;
+    width: 260px;
+    justify-content: space-between;
+    margin-right: 140px;
+  }
+  
+  .cocial-button {
+    width: 80px;
+    height: 80px;
+    display: block;
+    background-color: #e1e1e1;
+    text-align: center;
+    border-radius: 50%;
+    cursor: pointer;
+  }
+  
+  .cocial-button:hover {
+    background-color: #e74246;
+  }
+  
+  .cocial-button:active {
+    background-color: #d7373b;
+  }
+  
+  .cocial-button:active path {
+    fill: #e37376;
+  }
+  
+  .cocial-button-img {
+    position: relative;
+    top: 30px;
+  }
+  
+  .footrt-social {
+    display: flex;
+  }
+  
+  .discounts-hedlibe {
+    margin: 0;
+    padding: 0;
+    font-size: 30px;
+    line-height: 36px;
+    font-weight: 700;
+    margin-top: 5px;
+  }
+  
+  .discounts-text {
+    margin: 0;
+    padding: 0;
+    margin-top: 10px;
+  }
+  
+  .popup {
+    position: fixed;
+    bottom: 190px;
+    left: 32%;
+    width: 960px;
+    box-sizing: border-box;
+    padding: 50px;
+    background-color: #ffffff;
+    box-shadow: 0 30px 50px rgba(0, 0, 0, 0.7);
+    display: none;
+  }
+  
+  .popup-hedline {
+    font-size: 45px;
+    line-height: 45px;
+    font-weight: 500;
+    margin: 0;
+    margin-left: 50px;
+    margin-top: 21px;
+    margin-bottom: 25px;
+  }
+  .title-header {
+    text-align: center; 
+    margin-bottom: 100px;
+    font-size: 60px;
+  }
+  .navbar {
+    padding: 20px;
+  }
+  .head-title {
+    font-size: 27px;
+    margin-right: 165px;
+  }
+ 
+ 
