--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -49,7 +49,7 @@
           </li>
           <li class="nav-item">
 
-            <a class="nav-link nav-link-margin" href="/obaut">о нас</a>
+            <a class="nav-link nav-link-margin" href="#">о нас</a>
           </li>
           <li class="nav-item">
             <a class="nav-link nav-link-margin" href="#">контакты</a>
